test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/compound_mod.plx
#  Can't apply %= to a double
pub fn main(none) i32 {
    d: f64 = 5.0
    d %= 2
    return cast<i32>(d)
}
